--- a/angular.json
+++ b/angular.json
@@ -81,7 +81,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "weather-forecast:build"
+            "browserTarget": "weather-forecast:build",
+			"proxyConfig": "./proxy.conf.json"
           },
           "configurations": {
             "production": {
